--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "build": "ncc build close.js"
   },
   "dependencies": {
-    "@actions/core": "^1.4.0",
-    "@actions/github": "^5.0.0"
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.29.0"
-  }
+    "@octokit/webhooks-definitions": "^3.67.3",
+    "@vercel/ncc": "^0.38.1"
+  },
+  "packageManager": "pnpm@9.7.1"
 }
